--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    padding-top: 50px;
+    padding-top: 80px;
 }
 
 .container-fluid {
@@ -24,6 +24,10 @@ body {
     /*height: 100%;*/
 }
 
+/*.navbar-toggle {
+    padding: auto 10px;
+}
+*/
 .navbar-wrapper {
     position: absolute;
     top: 0;
@@ -33,14 +37,36 @@ body {
 }
 
 .navbar {
-    text-align: center;
-    font-size: 24px;
+    min-height: 80px;
+/*  text-align: center;
+    font-size: 24px;*/
     background-color: rgba(256, 256, 256, 0.8);
     border: 0;
-    -webkit-transition: all 0.4s ease;
-    transition: all 0.4s ease;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
     top: 0;
     z-index: 20;
+}
+
+#logo {
+    height: 50px;
+    -webkit-transition: all 0.3s;
+    transition: all 0.33s;
+}
+
+.sticky {
+/*    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
+    text-transform: lowercase;
+    font-family: "Helvetica";
+    font-size: 14px;
+    font-weight: 500;*/
+    /*width: 100%;*/
+    min-height: 40px;
+    background: rgba(256, 256, 256, 0.8);
+}
+
+.sticky #logo {
+    height: 25px;
 }
 
 .navbar-wrapper > .container {
@@ -55,16 +81,6 @@ body {
 
 .navbar-wrapper .navbar .container {
     width: auto;
-}
-
-.sticky {
-    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
-    text-transform: lowercase;
-    font-family: "Helvetica";
-    font-size: 14px;
-    font-weight: 500;
-    width: 100%;
-    background: rgba(192, 192, 192, 0.8);
 }
 
 #navbar > li {
