--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ body {
     font-weight: 500;*/
     /*width: 100%;*/
     min-height: 40px;
-    background: rgba(256, 256, 256, 0.8);
+    background: rgba(256, 256, 256, 0.9);
 }
 
 .sticky #logo {
@@ -93,10 +93,32 @@ body {
     background: url(assets/banner.png) center top no-repeat;
     width: 100%;
     overflow: hidden;
+    background-color: rgb(0,0,0);
 }
 
 .banner img {
     visibility: hidden;
+}
+
+.bannerheading1{
+    font-family: 'Helvetica';
+    position: relative;
+    left: 3rem;
+    top: 8rem;
+    color: white;
+}
+
+.bannerheading2{
+    font-family: 'Helvetica';
+    color: white;
+    float: right;
+    right: 3rem;
+    bottom: 7rem;
+    position: relative;
+}
+
+.heading {
+    font-size: 3rem;
 }
 
 .content-block-one {
@@ -130,6 +152,9 @@ body {
 }
 
 @media screen and (min-width: 768px) {
+    .heading {
+        font-size: 5rem;
+    }
     .content-block-one {
         padding-top: 48px;
         padding-bottom: 48px;
