--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,16 @@
-html, body {
-    height: 100%;
+html,
+body {
+    /*    height: 100%;*/
+    
     padding-top: 2rem;
     background-color: #eee;
     font-family: 'Open Sans', sans-serif;
-/*    overflow-x: hidden;*/
+    /*    overflow-x: hidden;*/
 }
 
 .container-fluid {
     padding: 0;
 }
-
 /* navbar */
 
 .navbar-default {
@@ -28,11 +29,11 @@ html, body {
     /*line-height: 100%;*/
     /*height: 100%;*/
 }
-
 /*.navbar-toggle {
     padding: auto 10px;
 }
 */
+
 .navbar-wrapper {
     position: absolute;
     top: 0;
@@ -43,8 +44,9 @@ html, body {
 
 .navbar {
     min-height: 80px;
-/*  text-align: center;
+    /*  text-align: center;
     font-size: 24px;*/
+    
     background-color: rgb(256, 256, 256);
     border: 0;
     -webkit-transition: all 0.3s;
@@ -60,12 +62,13 @@ html, body {
 }
 
 .sticky {
-/*    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
+    /*    text-shadow: 1px 1px 1px rgba(255, 255, 255, 0.8);
     text-transform: lowercase;
     font-family: "Helvetica";
     font-size: 14px;
     font-weight: 500;*/
     /*width: 100%;*/
+    
     min-height: 40px;
     background: rgba(256, 256, 256, 0.9);
 }
@@ -96,18 +99,17 @@ html, body {
     background: url(assets/banner.png) center top no-repeat;
     width: 100%;
     overflow: hidden;
-    background-color: rgb(0,0,0);
+    background-color: rgb(0, 0, 0);
 }
 
 .banner img {
     visibility: hidden;
 }
-
 /*.banner-container{
     overflow: hidden;
 }*/
 
-.bannerheading1{
+.bannerheading1 {
     position: relative;
     left: 3rem;
     top: 6rem;
@@ -115,7 +117,7 @@ html, body {
     width: 80%;
 }
 
-.bannerheading2{
+.bannerheading2 {
     color: white;
     float: right;
     right: 3rem;
@@ -161,7 +163,7 @@ html, body {
 }
 
 @media screen and (min-width: 768px) {
-    .heading p{
+    .heading p {
         font-size: 4rem;
         font-weight: 300;
         text-shadow: none;
@@ -178,6 +180,17 @@ html, body {
     .content-block-one .h1 {
         font-size: 63px;
     }
+    .flex-container {
+        display: flex;
+        width: 80rem;
+        margin: 0 auto;
+        flex-wrap: wrap;
+    }
+    .tiles {
+        background-color: dodgerblue;
+        flex: 30rem 1;
+        margin: 1rem;
+    }
 }
 
 .content-space-one {
@@ -192,30 +205,25 @@ html, body {
     padding-top: 100px;
     padding-bottom: 100px;
 }
+
 .content {
-    /*padding: 150px 0;*/
-    /*background-color: white;*/
-}
-.flex-container{
-    display: flex;
-    width: 1000px;
-    margin: 0 auto;
-    flex-flow: row wrap;
-    align-content: flex-end;
+    /*    display:inline;*/
 }
 
-.tiles{
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.tiles {
     background-color: dodgerblue;
-    flex: 1;
+    flex: 38rem 1;
     margin: 1rem;
 }
-.tiles > .icon{
+
+.tiles > .icon {
     background-color: lightblue;
     float: left;
-}
-
-.tiles > .content {
-    color: white;
 }
 
 .button {
@@ -228,77 +236,78 @@ html, body {
     background-color: #fff;
     margin: 0 auto;
 }
-.footer
-{
-    width:960px;
-    float:right;
-    text-align:right;
-    display:block;
-    padding-top:10px;
-    padding-bottom:10px;
+
+.footer {
+    width: 960px;
+    float: right;
+    text-align: right;
+    display: block;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-.image-links,.links
-{
-    display:inline-block;
+.image-links,
+.links {
+    display: inline-block;
 }
-.image-links
-{
-    vertical-align:middle;
-    position:relative;
+
+.image-links {
+    vertical-align: middle;
+    position: relative;
 }
-.image-links img
-{
-    margin-left:2px;
+
+.image-links img {
+    margin-left: 2px;
 }
+
 .social {
-list-style-type:none;
-margin:0;
-padding:0;
-height:35px;
-width:180px;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    height: 35px;
+    width: 180px;
 }
 
 ul.social a {
-display:block;
-height:35px;
-width:35px;
-text-indent:-9999px;
+    display: block;
+    height: 35px;
+    width: 35px;
+    text-indent: -9999px;
 }
 
 ul.social li {
-float:left;
-margin-right:10px;
+    float: left;
+    margin-right: 10px;
 }
 
 .social_twitter a {
-background:url(assets/social-media_twitter.png);
+    background: url(assets/social-media_twitter.png);
 }
 
 .social_twitter a:hover {
-background:url(assets/social-media_twitter.png);
+    background: url(assets/social-media_twitter.png);
 }
 
 .social_facebook a {
-background:url(assets/social-media_facebook.png);
+    background: url(assets/social-media_facebook.png);
 }
 
 .social_facebook a:hover {
-background:url(assets/social-media_facebook.png);
+    background: url(assets/social-media_facebook.png);
 }
 
 .social_linkedin a {
-background:url(assets/social-media_linkedin.png);
+    background: url(assets/social-media_linkedin.png);
 }
 
 .social_linkedin a:hover {
-background:url(assets/social-media_linkedin.png);
+    background: url(assets/social-media_linkedin.png);
 }
 
 .social_users a {
-background:url(assets/social-media_pisquare.png);
+    background: url(assets/social-media_pisquare.png);
 }
 
 .social_users a:hover {
-background:url(assets/social-media_pisquare.png);
+    background: url(assets/social-media_pisquare.png);
 }
