--- a/styles.css
+++ b/styles.css
@@ -310,7 +310,7 @@ a:hover {
     }
     .footer {
         margin: 0 auto;
-        padding: 30rem;
+        padding: 25rem;
     }
 }
 
@@ -325,7 +325,6 @@ a:hover {
     width: 100%;
     float: right;
     text-align: right;
-    display: block;
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -378,6 +377,10 @@ ul.social li {
 
 .social_users a {
     background: url(assets/social-media_pisquare.png);
+}
+
+.links {
+    margin: 1rem;
 }
 
 .trans {
