adds footer margin in percentage

--- a/styles.css
+++ b/styles.css
@@ -310,7 +310,7 @@ a:hover {
     }
     .footer {
         margin: 0 auto;
-        padding: 25rem;
+        padding: 15%;
     }
 }
 
@@ -412,7 +412,7 @@ ul.social li {
 .social > li:focus,
 .social > li:active:focus,
 .social > li.active:focus {
-    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.5);
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.55);
+    -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.55);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2), 0 3px 6px rgba(0, 0, 0, 0.55);
 }
